--- a/scroll/styles/globals.css
+++ b/scroll/styles/globals.css
@@ -2,10 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-:root{
-  @apply h-full bg-black;
+:root {
+  @apply h-full bg-black
 }
 
-body{
+body {
   @apply h-full bg-black
 }
